# comfyui_openvino

./: LICENSE  README.md  __init__.py  node_openvino.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
