[project]
name = "comfyui-openvino"
description = "OpenVINO node is designed for optimizing the performance of model inference in ComfyUI by leveraging Intel OpenVINO toolkits. It can support running model on Intel CPU, GPU and NPU device."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/openvino-dev-samples/comfyui_openvino"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ethanyang"
DisplayName = "ComfyUI-OpenVINO"
Icon = "https://avatars.githubusercontent.com/u/55443902?s=200&v=4"
